--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.5.8
 aniso8601==9.0.1
 click==7.1.2
+coverage==5.5
 Flask==1.1.2
 Flask-Caching==1.10.1
 Flask-Migrate==2.7.0
@@ -16,6 +17,7 @@ marshmallow==3.11.1
 marshmallow-sqlalchemy==0.24.3
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
+PyJWT==2.1.0
 python-dateutil==2.8.1
 python-editor==1.0.4
 pytz==2021.1
