--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install -r requirements.txt
   - pip install coveralls
 script:
-  - python -m unittest
+  - coverage run --source="auth/","library/" -m unittest
 after_script:
   - coveralls
 deploy:
