--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,10 @@ services:
             dockerfile: Dockerfile
         ports:
             - "5000:5000"
+        command: python manage.py runserver -h 0.0.0.0 -p 5000
+        environment:
+            - CACHE_REDIS_URL=redis://redis:6379
+            - PROD_DATABASE_URL=postgresql://postgres:postgres@db:5432/postgres
         volumes:
             - ./backend:/api
         depends_on:
@@ -21,6 +25,8 @@ services:
             - POSTGRES_PASSWORD=postgres
         ports:
             - "5432:5432"
+        volumes:
+            - ./backend/database:/api/database
 
     redis:
         image: redis
@@ -35,6 +41,5 @@ services:
             - "3000:3000"
         volumes:
             - ./frontend:/client
-            - /client/node_modules
         depends_on:
             - api
