--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,6 @@
+sudo: required
+services:
+  - docker
 language: python
 python:
   - "3.8"
@@ -10,11 +13,5 @@ script:
   - coverage run --source="auth/","library/" -m unittest
 after_script:
   - coveralls
-deploy:
-  provider: pages
-  skip_cleanup: true
-  keep_history: true
-  github_token: $github_token
-  target_branch: master
-  on:
-    branch: staging
+after_success:
+  - sh .travis/deploy_dockerhub.sh
