--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,8 +11,8 @@ services:
         environment:
             - CACHE_REDIS_URL=redis://redis:6379
             - PROD_DATABASE_URL=postgresql://postgres:postgres@db:5432/postgres
-#        volumes:
-#            - ./backend:/api
+        volumes:
+            - ./backend:/api
         depends_on:
             - db
             - redis
@@ -25,8 +25,8 @@ services:
             - POSTGRES_PASSWORD=postgres
         ports:
             - "5432:5432"
-#        volumes:
-#            - ./backend/database:/api/database
+        volumes:
+            - ./backend/database:/api/database
 
     redis:
         image: redis
@@ -39,7 +39,7 @@ services:
             dockerfile: Dockerfile
         ports:
             - "3000:3000"
-#        volumes:
-#            - ./frontend:/client
+        volumes:
+            - ./frontend:/client
         depends_on:
             - api
