--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,7 +5,7 @@ EXPOSE 5000
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 ENV FlASK_APP manage.py
-ENV FLASK_ENV production
+ENV FLASK_ENV development
 ENV FLASK_DEBUG 0
 
 WORKDIR /api
