--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install coveralls
 script:
   - coverage run --source="auth/","library/" -m unittest
-  - cd ../ && pylint backend --ignore=migrations --rcfile=backend/.pylintrc
+  - cd ../ && pylint backend --ignore=migrations --rcfile=backend/.pylintrc --exit-zero
 after_script:
   - coveralls
 #after_success:
