--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
             dockerfile: Dockerfile
         ports:
             - "5000:5000"
+#        command: python -m gunicorn --workers 3 --bind 0.0.0.0:5000 manage:app
         command: python manage.py runserver -h 0.0.0.0 -p 5000
         environment:
             - CACHE_REDIS_URL=redis://redis:6379
