--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,8 @@ services:
             dockerfile: Dockerfile
         ports:
             - "3000:3000"
+        environment:
+            CHOKIDAR_USEPOLLING: "true"
         volumes:
             - ./frontend:/client
         depends_on:
