--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,11 @@
 alembic==1.5.8
 aniso8601==9.0.1
 astroid==2.5.6
+certifi==2020.12.5
 click==7.1.2
 colorama==0.4.4
 coverage==5.5
+elasticsearch==7.13.0
 Flask==1.1.2
 Flask-Caching==1.10.1
 Flask-Migrate==2.7.0
@@ -35,5 +37,6 @@ redis==3.5.3
 six==1.15.0
 SQLAlchemy==1.4.11
 toml==0.10.2
+urllib3==1.26.5
 Werkzeug==1.0.1
 wrapt==1.12.1
