--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,13 +1,21 @@
 alembic==1.5.8
+amqp==5.0.6
 aniso8601==9.0.1
 astroid==2.5.6
+billiard==3.6.4.0
+blinker==1.4
+celery==5.1.0
 certifi==2020.12.5
 click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.2.0
 colorama==0.4.4
 coverage==5.5
 elasticsearch==7.13.0
 Flask==1.1.2
 Flask-Caching==1.10.1
+Flask-Mail==0.9.1
 Flask-Migrate==2.7.0
 Flask-RESTful==0.3.8
 Flask-Script==2.0.6
@@ -17,12 +25,14 @@ gunicorn==20.1.0
 isort==5.8.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
+kombu==5.1.0
 lazy-object-proxy==1.6.0
 Mako==1.1.4
 MarkupSafe==1.1.1
 marshmallow==3.11.1
 marshmallow-sqlalchemy==0.24.3
 mccabe==0.6.1
+prompt-toolkit==3.0.18
 psycopg2==2.8.6
 psycopg2-binary==2.8.6
 PyJWT==2.1.0
@@ -38,5 +48,7 @@ six==1.15.0
 SQLAlchemy==1.4.11
 toml==0.10.2
 urllib3==1.26.5
+vine==5.0.0
+wcwidth==0.2.5
 Werkzeug==1.0.1
 wrapt==1.12.1
