--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -41,6 +41,7 @@ pylint-flask==0.6
 pylint-flask-sqlalchemy==0.2.0
 pylint-plugin-utils==0.6
 python-dateutil==2.8.1
+python-dotenv==0.17.1
 python-editor==1.0.4
 pytz==2021.1
 redis==3.5.3
